--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "boto3>=1.40.46",
+    "datasets>=4.2.0",
+    "pandas>=2.3.3",
 ]
