--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "accelerate>=1.10.1",
     "boto3>=1.40.46",
     "datasets>=4.2.0",
+    "evaluate>=0.4.6",
     "pandas>=2.3.3",
+    "scikit-learn>=1.7.2",
+    "transformers>=4.57.0",
 ]
